# lhapdf

./: .hgignore  .hgtags  AUTHORS  CODINGSTYLE  CONFIGFLAGS  ChangeLog  DATARELEASE  DESIGN  INSTALL  Makefile.am  TODO  configure.ac  countnsets  lhapdf-config.in  lhapdf.conf  lhapdf.in  mkindex  pdfsets.index  plotevratios.py  plotnsets  plotpdfs  testalphas.cc  testgrid.cc  testinfo  testinfo.cc  testlhapdf  testpaths.cc
EXAMPLEPDF/: EXAMPLEPDF.info  EXAMPLEPDF_0000.lha  EXAMPLEPDF_0001.lha
doc/: DoxyLayout.xml  Doxyfile.in  LHAPDF.dox  Makefile.am  dconfig  examples.dox  lhapdf.css  main.dox  mkpdflist  pdfsets.dox
doc/manual/: Makefile  building.tex  comparison.tex  cppPDFs.tex  improvements.tex  interpolationPDFs.tex  lhapdf6-manual.tex  main.tex  manual.tex  overview.tex  pdfBase.tex  preamble.tex  usage.tex  wrapperCookbook.tex
doc/manual/Docs/: evolutionPDFs.tex  fortranPDFs.tex  interfaces.tex  main.tex  overview.tex
examples/: Makefile.am  analytic.cc  hessian2replicas.cc  pythonexample.py  testpdf.cc  testpdfset.cc  testpdfunc.cc  testpdfunc.py
examples/Accuracy/: Makefile  accuracy  accuracy.cc  accuracy.cpp
examples/Analytic/: PDFAnalytic.cpp  PDFAnalytic.h  analytic.cc  analytic.cpp
examples/SetTest/: Makefile  settest  settest.cc
include/: AlphaS.h  Bicubic.h  Bilinear.h  ErrExtrapolator.h  Extrapolator.h  Interpolator.h  Nearest.h  PDF.h  PDFGrid.h  PDFSet.h  factory.h  types.h  version.h
include/LHAPDF/: AlphaS.h  Bicubic.h  BicubicInterpolator.h  Bilinear.h  BilinearInterpolator.h  CompositePDF.h  Config.h  Config.h.in  ErrExtrapolator.h  Exceptions.h  Extrapolator.h  Factories.h  FileIO.h  GridPDF.h  Info.h  Interpolator.h  KnotArray.h  LHAGlue.h  LHAPDF.h  LogBicubicInterpolator.h  LogBilinearInterpolator.h  Makefile.am  NearestPointExtrapolator.h  PDF.h  PDFGrid.h  PDFIndex.h  PDFInfo.h  PDFSet.h  Paths.h  Reweighting.h  Types.h  Utils.h  Version.h  Version.h.in
m4/: boost.m4
migration/: README  cmppdfs  cmpplotv5v6  cmpv5v6  compareversions  creategrids  creategrids.py  dumpv5  dumpv5.cc  dumpv5.txt  dumpv5v6.cc  dumpv6  dumpv6.cc  dumpv6.txt  gridhack.py  mksin  plot.g  plotpdfs  plotv5v6  sparserep  testhera.py  testpdf.cc  tomigrate  translator  vvsimple  vvsimple.py
migration/MSTW2008lo90cl_nf3/: meta.LHinfo
migration/constant/: mbr_0.LHgm  meta.LHinfo
migration/scripts/: translator.py
migration/sin/: test.LHm
src/: AlphaS.cc  AlphaS.cpp  AlphaS_Analytic.cc  AlphaS_Ipol.cc  AlphaS_ODE.cc  Bicubic.cc  Bicubic.cpp  BicubicInterpolator.cc  Bilinear.cc  Bilinear.cpp  BilinearInterpolator.cc  CompositePDF.cc  Config.cc  ContinuationExtrapolator.cc  ErrExtrapolator.cc  ErrExtrapolator.cpp  Factories.cc  FileIO.cc  GridPDF.cc  Info.cc  Interpolator.cc  LHAGlue.cc  LogBicubicInterpolator.cc  LogBilinearInterpolator.cc  Makefile  Makefile.am  Nearest.cc  Nearest.cpp  NearestPointExtrapolator.cc  PDF.cc  PDFGrid.cc  PDFGrid.cpp  PDFIndex.cc  PDFInfo.cc  PDFSet.cc  PDFSet.cpp  Paths.cc  Utils.cc
src/yamlcpp/: #Makefile.am#  .#Makefile.am  Makefile  Makefile.am  Makefile.in
src/yamlcpp/contrib/: graphbuilder.cpp  graphbuilderadapter.cpp  graphbuilderadapter.h
tests/: Makefile.am  testalphas.cc  testcompositepdf.cc  testgrid.cc  testgridpdfinit.cc  testinfo.cc  testpaths.cc  testperf.cc  testsetperf.cc
tests/CT10/: CT10.LHm
tests/CTEQ61/: cteq61.LHm
tests/CTEQ66/: cteq66.LHm
tests/MRST2001/members/: 0.LHm
tests/MSTW2008/: mbr_0.LHgm  set.LHmeta
tests/MSTW2008/backup/: 0.LHm  convert.py
tests/MSTW2008lo90cl_nf3/: mbr_0.LHgm  meta.LHinfo
tests/NNPDF/: NNPDF23_nlo_as_0119.LHm
tests/curved/: mbr_0.LHgm  meta.LHinfo
tests/scripts/: creategrids.py  gridhack.py  sparserep.py
tests/sin/: Makefile  out.txt  sin.cc  sin.cpp  singen.py  sparserep.py  test.LHm  test2.LHm
wrappers/: Makefile.am
wrappers/cython/: Makefile.am  clhapdf.pxd  lhapdf.cpp  lhapdf.pyx  setup.py  setup.py.in
wrappers/pythia8/: wrapp8.cc  wrapp8.cpp
wrappers/python/: Makefile.am  clhapdf.pxd  lhapdf.pyx  setup.py.in
