# TODO: Provide a convenience LHAPDF.h to include all the main API elements?

pkginclude_HEADERS = \
  PDF.h \
  Info.h \
  Config.h \
  Utils.h \
  Paths.h \
  Exceptions.h \
  Factories.h \
  PDFIndex.h \
  GridPDF.h \
  KnotArray.h \
  Interpolator.h \
  Extrapolator.h \
  BilinearInterpolator.h \
  BicubicInterpolator.h \
  LogBilinearInterpolator.h \
  LogBicubicInterpolator.h \
  ErrExtrapolator.h \
  NearestPointExtrapolator.h \
  AlphaS.h
